tests/baselines/reference/nestedClassDeclaration.errors.txt
tests/cases/conformance/classes/nestedClassDeclaration.ts(5,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(7,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,11): error TS1005: ':' expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,11): error TS2304: Cannot find name 'C4'.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,14): error TS1005: ',' expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(17,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/nestedClassDeclaration.ts (6 errors) ====
    // nested classes are not allowed
    
    class C {
        x: string;
        class C2 {
        ~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    function foo() {
        class C3 {
        }
    }
    
    var x = {
        class C4 {
              ~~
!!! error TS1005: ':' expected.
              ~~
!!! error TS2304: Cannot find name 'C4'.
                 ~
!!! error TS1005: ',' expected.
!!! related TS1007 tests/cases/conformance/classes/nestedClassDeclaration.ts:14:9: The parser expected to find a '}' to match the '{' token here.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    